# app/Http/Controllers/SwaggerController.php
@@ -36,10 +36,32 @@ use Illuminate\Http\Request;
  *      @OA\Property(property="description", type="string", example="Escrever documentação abrangente para projeto tal..."),
  *      @OA\Property(property="status", type="string", enum={"pending", "in_progress", "completed"}, example="pending"),
  *      @OA\Property(property="status_label", type="string", example="Pendente"),
+ *      @OA\Property(
+ *          property="color", 
+ *          type="object",
+ *          @OA\Property(property="id", type="integer", example=3, description="ID da cor"),
+ *          @OA\Property(property="name", type="string", example="Azul", description="Nome da cor"),
+ *          @OA\Property(property="hex_code", type="string", example="#0000FF", description="Cor em formato hexadecimal")
+ *      ),
  *      @OA\Property(property="due_date", type="string", format="date", example="2023-12-31"),
  *      @OA\Property(property="is_overdue", type="boolean", example=false),
+ *      @OA\Property(property="is_favorited", type="boolean", example=false),
+ *      @OA\Property(property="favorites_count", type="integer", example=1),
  *      @OA\Property(property="created_at", type="string", format="date-time", example="2023-01-01 12:00:00"),
- *      @OA\Property(property="updated_at", type="string", format="date-time", example="2023-01-02 13:00:00")
+ *      @OA\Property(property="updated_at", type="string", format="date-time", example="2023-01-02 13:00:00"),
+ *      @OA\Property(
+ *          property="user", 
+ *          type="object",
+ *          @OA\Property(property="id", type="integer", example=3, description="ID do usuário"),
+ *          @OA\Property(property="name", type="string", example="João Silva", description="Nome do usuário"),
+ *          @OA\Property(
+ *              property="profile", 
+ *              type="object",
+ *              @OA\Property(property="id", type="integer", example=1, description="ID do perfil"),
+ *              @OA\Property(property="type", type="string", enum={"admin", "manager", "member"}, example="admin", description="Tipo do perfil"),
+ *              @OA\Property(property="description", type="string", example="Administrador", description="Descrição do perfil")
+ *          )
+ *      )
  * )
  * 
  * @OA\Schema(
